--- a/Ajay Portfolio/style.css
+++ b/Ajay Portfolio/style.css
@@ -6,7 +6,7 @@ font-weight: 400;
 font-style: normal;
 text-align: center;
 -webkit-text-fill-color: rgb(200, 0, 0);
-font-size: 300%;
+font-size: 9vw;
 margin-bottom: 1%;
 cursor: pointer;
 background-color: rgb(255, 64, 64);
@@ -14,6 +14,10 @@ background-color: rgb(255, 64, 64);
 
 body {
     margin: 0;
+}
+
+.redBackground {
+    background-color: rgb(255, 64, 64);
 }
 
 * {
@@ -28,7 +32,7 @@ body {
     flex-direction: row;
     justify-content: center;
     gap: 15vw;
-    font-size: 180%;
+    font-size: 6vw;
     margin-bottom: 5%;
     margin-top: 0;
     margin-left:0;
@@ -44,27 +48,27 @@ body {
 
 }
 
-#leftBar,
-#rightBar {
-    background-color: rgb(255, 64, 64);
-    position:absolute;
-    width: 10%;
-    height: 220%;
-}
 
-#rightBar {
-    right: 0%;
-}
 
 
 
 #galleryContainer {
-box-sizing: border-box;
-position: relative;
-width: 60%;
-margin-left: auto;
-margin-right: auto;
+    width: 70%;
+background-color:white;
+padding-left: 7%;
+padding-right: 7%;
+padding-bottom: 10%;
+padding-top: 10%;
+margin-left:auto;
+margin-right:auto;
 }
+
+#innerGallery {
+    box-sizing: border-box;
+    position: relative;
+
+}
+
 .bigImage {
     margin-left: auto;
     margin-right: auto;
@@ -121,8 +125,12 @@ img {
     font-weight: 400;
     font-style: normal;
     font-size: 130%;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    width: 90%;
+    padding-top: 5%;
+    padding-bottom: 15%;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: white;
     text-align:justify;
 }
 
@@ -141,8 +149,10 @@ img {
     font-family: "Patua One", serif;
     font-weight: 400;
     font-style: normal;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    width: 100%;
+    padding-top: 5%;
+    padding-bottom: 15%;
+    background-color: white;
 }
 
 #highlightsTitle {
@@ -174,8 +184,11 @@ img {
     font-family: "Patua One", serif;
     font-weight: 400;
     font-style: normal;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    width: 100%;
+    padding-top: 5%;
+    padding-bottom: 15%;
+    background-color: white;
+
 }
 
 #galleryContainer {
@@ -195,7 +208,7 @@ img {
     font-style: normal;
     margin-left: 5vw;
     margin-right: 5vw;
-    font-size: 150%;
+    font-size: 5vw;
 }
 
 #bottomBar {
