--- a/Ajay Portfolio/style.css
+++ b/Ajay Portfolio/style.css
@@ -10,10 +10,14 @@ font-size: 9vw;
 margin-bottom: 1%;
 cursor: pointer;
 background-color: rgb(255, 64, 64);
+
 }
 
 body {
     margin: 0;
+    width: 85vw;
+    margin-left:auto;
+    margin-right: auto;
 }
 
 .redBackground {
@@ -50,6 +54,18 @@ body {
 
 
 
+.homeTitle {
+    font-family: "Patua One", serif;
+    font-weight: 400;
+    font-style: normal;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    text-align:center;
+    font-size: 7vw;
+    text-decoration: underline rgb(200, 0, 0);
+    margin-bottom: 10%;
+    cursor: pointer;
+}
 
 
 #galleryContainer {
@@ -79,8 +95,8 @@ margin-right:auto;
 .next {
     cursor: pointer;
     position: absolute;
-   top: 35%;
-    font-size: 35px;
+   top: 33vw;
+    font-size: 8vw;
     color: white;
     padding: 0.7vh;
     
@@ -124,7 +140,7 @@ img {
     font-family: "Patua One", serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 130%;
+    font-size: 4vw;
     width: 90%;
     padding-top: 5%;
     padding-bottom: 15%;
@@ -134,6 +150,31 @@ img {
     text-align:justify;
 }
 
+.photoContainer {
+    float: right;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5vw;
+    display: flex;
+    margin-bottom: 5vw;
+
+}
+
+#photoGallery {
+    background-color:white;
+    padding-bottom: 100%;
+    padding-top: 10%;
+}
+
+.galleryPic {
+    width: 28%;
+    border-radius: 10px 10px 10px 10px;
+    
+
+    
+}
+
 #resumeTitle {
     font-family: "Patua One", serif;
     font-weight: 400;
@@ -141,7 +182,7 @@ img {
     margin-left: 5vw;
     margin-right: 5vw;
     text-align:center;
-    font-size: 250%;
+    font-size: 7vw;
     text-decoration: underline rgb(200, 0, 0);
 }
 
@@ -153,6 +194,7 @@ img {
     padding-top: 5%;
     padding-bottom: 15%;
     background-color: white;
+    font-size: 3.5vw;
 }
 
 #highlightsTitle {
@@ -162,12 +204,13 @@ img {
     margin-left: 5vw;
     margin-right: 5vw;
     text-align:center;
-    font-size: 250%;
+    font-size: 7vw;
     text-decoration: underline rgb(200, 0, 0);
+    
 }
 
 #highlightsBody {
-    font-size: 130%;
+    font-size: 3.5vw;
     text-align: justify;
 }
 
