--- a/Ajay Portfolio/style.css
+++ b/Ajay Portfolio/style.css
@@ -107,12 +107,12 @@ body {
 }
 .next {
     right:15%;
-    border-radius: 3px 0 0 3px;
+    border-radius: 8px 0 0 8px;
 }
 
 .prev {
     left:15%;
-    border-radius:0 3px 3px 0;
+    border-radius:0 8px 8px 0;
 }
 
 .prev:hover,
@@ -202,7 +202,7 @@ img {
 
 
 #highlightsBody {
-    font-size: 3.5vw;
+    font-size: 4vw;
     text-align: justify;
 }
 
@@ -255,13 +255,23 @@ img {
 
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (max-width: 600px) {
+    
+    #galleryContainer {
+
+        padding-bottom: 100%;
+
+    }
+    
+}
+
+@media only screen and (min-width: 690px) {
     #Name {
         font-size: 6vw;
     }
     
     #navBar {
-        font-size: 3vw;
+        font-size: 6vw;
         gap: 8vw;
         margin-bottom: 3%;
     }
@@ -271,7 +281,7 @@ img {
     }
 
     .Title {
-        font-size: 4vw;
+        font-size: 5vw;
     }
 
     #photoSlide {
@@ -307,33 +317,138 @@ img {
         width: 90%;
         margin-left: auto;
         margin-right: auto;
+        font-size: 2.5vw;
     }
 
     #aboutMe {
         width: 90%;
         margin-left: auto;
         margin-right: auto;
+        font-size: 3vw;
     }
 
         .prev,
     .next {
 
-   top: 27vw;
+   top: 21vw;
     font-size: 5vw;
     color: white;
     padding: 0.7vh;
     
-}
+    }
 
-.next {
+    .next {
     right:22%;
-    border-radius: 3px 0 0 3px;
+    border-radius: 8px 0 0 8px;
+    }
+
+    .prev {
+        left: 14.8vw;
+        border-radius:0 8px 8px 0;
+    }
+
+    #highlightsBody {
+        font-size: 2.6vw;
+
+    }
+
+    #update {
+        font-size: 3vw;
+    }
+
 }
 
-.prev {
-    left:15%;
-    border-radius:0 3px 3px 0;
-}
+@media only screen and (min-width: 1000px) {
+    #Name {
+        font-size: 4.5vw;
+    }
+    
+    #navBar {
+        font-size: 3.5vw;
+        gap: 5vw;
+        margin-bottom: 1%;
+    }
 
+    #topBand {
+        margin-bottom: 0%;
+    }
+
+    .Title {
+        font-size: 3vw;
+    }
+
+    #photoSlide {
+        padding-left: 10%;
+        padding-right: %;        
+    }
+
+    #galleryContainer {
+        padding-top: 2%;
+        width: 66%;
+    }
+
+    #aboutMeOuter {
+        padding-top: 0%;
+        width: 80%;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    #photoGallery {
+        padding-top: 2%;
+        width: 80%;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    #Highlights {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #resume {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 1.8vw;
+    }
+
+    #aboutMe {
+        padding-top:0.5%;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 2vw;
+    }
+
+        .prev,
+    .next {
+
+   top: 18vw;
+    font-size: 4vw;
+    color: white;
+    padding: 0.7vh;
+    
+    }
+
+    .next {
+    right:22%;
+    border-radius: 8px 0 0 8px;
+    }
+
+    .prev {
+        left: 14.8vw;
+        border-radius:0 8px 8px 0;
+    }
+
+    #highlightsBody {
+        font-size: 2.6vw;
+
+    }
+
+    #update {
+        font-size: 3vw;
+    }
 
 }
